source/adios2/toolkit/expression/parser.output
Terminals which are not used

   SQRT
   POW
   SIN
   COS
   TAN
   CURL
   MULT
   DIV
   MINUS
   UMINUS


State 5 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | ENDL input
    3      | decl input
    4      | exp input

    5 decl: ALIAS PATH
    6     | ALIAS PATH INDICES

    7 exp: ALIAS
    8    | ALIAS INDICES
    9    | PATH
   10    | NUMBER
   11    | L_PAREN exp R_PAREN
   12    | exp PLUS exp
   13    | MAGNITUDE L_PAREN exp R_PAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
SQRT (258)
POW (259)
SIN (260)
COS (261)
TAN (262)
MAGNITUDE (263) 13
CURL (264)
MULT (265)
DIV (266)
PLUS (267) 12
MINUS (268)
L_PAREN (269) 11 13
R_PAREN (270) 11 13
INDICES (271) 6 8
ENDL (272) 2
NUMBER (273) 10
ALIAS (274) 5 6 7 8
PATH (275) 5 6 9
UMINUS (276)


Nonterminals, with rules where they appear

$accept (22)
    on left: 0
input (23)
    on left: 1 2 3 4, on right: 0 2 3 4
decl (24)
    on left: 5 6, on right: 3
exp (25)
    on left: 7 8 9 10 11 12 13, on right: 4 11 12 13


state 0

    0 $accept: . input $end

    MAGNITUDE  shift, and go to state 1
    L_PAREN    shift, and go to state 2
    ENDL       shift, and go to state 3
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 5
    PATH       shift, and go to state 6

    $default  reduce using rule 1 (input)

    input  go to state 7
    decl   go to state 8
    exp    go to state 9


state 1

   13 exp: MAGNITUDE . L_PAREN exp R_PAREN

    L_PAREN  shift, and go to state 10


state 2

   11 exp: L_PAREN . exp R_PAREN

    MAGNITUDE  shift, and go to state 1
    L_PAREN    shift, and go to state 2
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 11
    PATH       shift, and go to state 6

    exp  go to state 12


state 3

    2 input: ENDL . input

    MAGNITUDE  shift, and go to state 1
    L_PAREN    shift, and go to state 2
    ENDL       shift, and go to state 3
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 5
    PATH       shift, and go to state 6

    $default  reduce using rule 1 (input)

    input  go to state 13
    decl   go to state 8
    exp    go to state 9


state 4

   10 exp: NUMBER .

    $default  reduce using rule 10 (exp)


state 5

    5 decl: ALIAS . PATH
    6     | ALIAS . PATH INDICES
    7 exp: ALIAS .
    8    | ALIAS . INDICES

    INDICES  shift, and go to state 14
    PATH     shift, and go to state 15

    PATH      [reduce using rule 7 (exp)]
    $default  reduce using rule 7 (exp)


state 6

    9 exp: PATH .

    $default  reduce using rule 9 (exp)


state 7

    0 $accept: input . $end

    $end  shift, and go to state 16


state 8

    3 input: decl . input

    MAGNITUDE  shift, and go to state 1
    L_PAREN    shift, and go to state 2
    ENDL       shift, and go to state 3
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 5
    PATH       shift, and go to state 6

    $default  reduce using rule 1 (input)

    input  go to state 17
    decl   go to state 8
    exp    go to state 9


state 9

    4 input: exp . input
   12 exp: exp . PLUS exp

    MAGNITUDE  shift, and go to state 1
    PLUS       shift, and go to state 18
    L_PAREN    shift, and go to state 2
    ENDL       shift, and go to state 3
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 5
    PATH       shift, and go to state 6

    $default  reduce using rule 1 (input)

    input  go to state 19
    decl   go to state 8
    exp    go to state 9


state 10

   13 exp: MAGNITUDE L_PAREN . exp R_PAREN

    MAGNITUDE  shift, and go to state 1
    L_PAREN    shift, and go to state 2
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 11
    PATH       shift, and go to state 6

    exp  go to state 20


state 11

    7 exp: ALIAS .
    8    | ALIAS . INDICES

    INDICES  shift, and go to state 14

    $default  reduce using rule 7 (exp)


state 12

   11 exp: L_PAREN exp . R_PAREN
   12    | exp . PLUS exp

    PLUS     shift, and go to state 18
    R_PAREN  shift, and go to state 21


state 13

    2 input: ENDL input .

    $default  reduce using rule 2 (input)


state 14

    8 exp: ALIAS INDICES .

    $default  reduce using rule 8 (exp)


state 15

    5 decl: ALIAS PATH .
    6     | ALIAS PATH . INDICES

    INDICES  shift, and go to state 22

    $default  reduce using rule 5 (decl)


state 16

    0 $accept: input $end .

    $default  accept


state 17

    3 input: decl input .

    $default  reduce using rule 3 (input)


state 18

   12 exp: exp PLUS . exp

    MAGNITUDE  shift, and go to state 1
    L_PAREN    shift, and go to state 2
    NUMBER     shift, and go to state 4
    ALIAS      shift, and go to state 11
    PATH       shift, and go to state 6

    exp  go to state 23


state 19

    4 input: exp input .

    $default  reduce using rule 4 (input)


state 20

   12 exp: exp . PLUS exp
   13    | MAGNITUDE L_PAREN exp . R_PAREN

    PLUS     shift, and go to state 18
    R_PAREN  shift, and go to state 24


state 21

   11 exp: L_PAREN exp R_PAREN .

    $default  reduce using rule 11 (exp)


state 22

    6 decl: ALIAS PATH INDICES .

    $default  reduce using rule 6 (decl)


state 23

   12 exp: exp . PLUS exp
   12    | exp PLUS exp .

    $default  reduce using rule 12 (exp)


state 24

   13 exp: MAGNITUDE L_PAREN exp R_PAREN .

    $default  reduce using rule 13 (exp)
